<resources>
    <string name="app_name">Notes</string>
    <!-- Login activity -->
    <string name="started_title">Bienvenido!!!!</string>
    <string name="started_subtitle">
        <br><b>Login</b> para acceder a la aplicacion.</br>
        <br><b>Registrate</b> para crear un nuevo usuario y acceder a la aplicacion.</br>
    </string>
    <string name="tv_username_login">Username</string>
    <string name="et_username_login">Escribe tu usuario</string>
    <string name="tv_password_login">Password</string>
    <string name="et_password_login">Escribe tu contraseña</string>
    <string name="tv_btn_login">LOGIN</string>
    <string name="tv_btn_register">REGISTER</string>

    <!-- Register dialog -->
    <string name="tv_username_register">Username</string>
    <string name="et_username_register">Escribe tu usuario</string>
    <string name="tv_password_register">Password</string>
    <string name="et_password_register">Escribe tu contraseña</string>
    <string name="tv_email_register">Email</string>
    <string name="et_email_register">Escribe tu correo electronico</string>
    <string name="et_confirm_password_register">Confirma tu contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_forgot_password">¿Olvidaste la contraseña?</string>
    <string name="tv_no_account">¿No tienes una cuenta?</string>
    <string name="tv_sign_up">Registrate</string>
    <string name="tv_register">Añadir una cuenta nueva</string>
    <string name="tv_sign_in">Iniciar sesion</string>
    <string name="tv_have_account">¿Ya tienes una cuenta?</string>
</resources>