<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        android:padding="20dp"
        tools:context=".fragments.LoginFragment">

    <TextView
            android:id="@+id/tv_started_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/started_title"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tv_started_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/started_subtitle"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_started_title" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_username_login"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/et_username_login"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_started_subtitle"
            app:startIconDrawable="@drawable/icon_account">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username_login"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text"
                android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_password_login"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/et_password_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_username_login"
            app:startIconDrawable="@drawable/icon_password">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_login"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="textPassword"
                android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvForgotPassword"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/tv_forgot_password"
            android:textSize="20sp"
            android:textColor="@color/secondaryLightColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password_login" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/ButtonWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_btn_login"
            android:textColor="#009688"
            android:layout_marginBottom="150dp"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
            app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
            android:id="@+id/tv_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/tv_no_account"
            android:textSize="20sp"
            android:textColor="@color/secondaryLightColor"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintEnd_toStartOf="@id/tv_signUp" />

    <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_sign_up"
            android:textSize="20sp"
            android:textColor="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />
</androidx.constraintlayout.widget.ConstraintLayout>